--- a/index.html
+++ b/index.html
@@ -340,63 +340,63 @@
                 <h2>📸 System Screenshots</h2>
                 <div class="screenshots-grid">
                     <div class="screenshot-item">
-                        <img src="Images/login.png" alt="Login Interface" onerror="this.src='https://via.placeholder.com/400x250/667eea/white?text=Login+Interface'">
+                        <img src="images/login.png" alt="Login Interface" onerror="this.src='https://via.placeholder.com/400x250/667eea/white?text=Login+Interface'">
                         <div class="screenshot-caption">
                             <h4>Login Interface</h4>
                             <p>Halaman login untuk masuk sistem</p>
                         </div>
                     </div>
                     <div class="screenshot-item">
-                        <img src="Images/dashboard.png" alt="Admin Dashboard" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Admin+Dashboard'">
+                        <img src="images/dashboard.png" alt="Admin Dashboard" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Admin+Dashboard'">
                         <div class="screenshot-caption">
                             <h4>Admin Dashboard</h4>
                             <p>Tampilan Dashboard admin</p>
                         </div>
                     </div>
                     <div class="screenshot-item">
-                        <img src="Images/input-karyawan.png" alt="Employee Management" onerror="this.src='https://via.placeholder.com/400x250/667eea/white?text=Employee+Data'">
+                        <img src="images/input-karyawan.png" alt="Employee Management" onerror="this.src='https://via.placeholder.com/400x250/667eea/white?text=Employee+Data'">
                         <div class="screenshot-caption">
                             <h4>Employee Management</h4>
                             <p>Form input data karyawan</p>
                         </div>
                     </div>
                     <div class="screenshot-item">
-                        <img src="Images/data-jabatan.png" alt="Position Management" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Position+Data'">
+                        <img src="images/data-jabatan.png" alt="Position Management" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Position+Data'">
                         <div class="screenshot-caption">
                             <h4>Position Management</h4>
                             <p>Tampilan data-data jabatan</p>
                         </div>
                     </div>
 		    <div class="screenshot-item">
-                        <img src="Images/dashboard2.png" alt="Admin Dashboard" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Admin+Dashboard'">
+                        <img src="images/dashboard2.png" alt="Admin Dashboard" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Admin+Dashboard'">
                         <div class="screenshot-caption">
                             <h4>Karyawan Dashboard</h4>
                             <p>Tampilan dashboard karyawan</p>
                         </div>
                     </div>
                     <div class="screenshot-item">
-                        <img src="Images/pengajuan-overtime.png" alt="Overtime Tracking" onerror="this.src='https://via.placeholder.com/400x250/667eea/white?text=Overtime+Data'">
+                        <img src="images/pengajuan-overtime.png" alt="Overtime Tracking" onerror="this.src='https://via.placeholder.com/400x250/667eea/white?text=Overtime+Data'">
                         <div class="screenshot-caption">
                             <h4>Overtime Management</h4>
                             <p>Tampilan form input pengajuan lembur</p>
                         </div>
                     </div>
 		    <div class="screenshot-item">
-                        <img src="Images/data-overtime.png" alt="Position Management" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Position+Data'">
+                        <img src="images/data-overtime.png" alt="Position Management" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Position+Data'">
                         <div class="screenshot-caption">
                             <h4>Overtime Management</h4>
                             <p>Tampilan data-data overtime</p>
                         </div>
                     </div>
                     <div class="screenshot-item">
-                        <img src="Images/approval.png" alt="Approval System" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Approval+System'">
+                        <img src="images/approval.png" alt="Approval System" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Approval+System'">
                         <div class="screenshot-caption">
                             <h4>Approval Workflow</h4>
                             <p>Tampilan input persetujuan status overtime</p>
                         </div>
                     </div>
 		    <div class="screenshot-item">
-                        <img src="Images/report.png" alt="Approval System" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Approval+System'">
+                        <img src="images/report.png" alt="Approval System" onerror="this.src='https://via.placeholder.com/400x250/764ba2/white?text=Approval+System'">
                         <div class="screenshot-caption">
                             <h4>Report</h4>
                             <p>Tampilan report dengan filter cetak</p>
@@ -637,3 +637,4 @@
 </body>
 
 </html>
+
