--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>🔥 OVERTIME MANAGEMENT SYSTEM</h1>
-            <p class="subtitle">Sistem Manajemen Lembur Modern untuk PT. Sertco Quality</p>
+            <h1>OVERTIME MANAGEMENT SYSTEM</h1>
+            <p class="subtitle">Sistem Informasi Lembur untuk PT. Sertco Quality</p>
         </header>
 
         <div class="content">
@@ -632,5 +632,6 @@
 </body>
 
 </html>
+
 
 
